[gd_scene load_steps=48 format=2]

[ext_resource path="res://scripts/player/state machine/states/attack.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=2]
[ext_resource path="res://fonts/m5x7.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/player/skull_stun_normal.png" type="Texture" id=4]
[ext_resource path="res://scripts/player/state machine/State_Manager.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/state machine/states/idle.gd" type="Script" id=6]
[ext_resource path="res://scripts/player/state machine/states/run.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/state machine/states/jump.gd" type="Script" id=8]
[ext_resource path="res://sprites/player/skull_stun_color.png" type="Texture" id=9]
[ext_resource path="res://shaders/toon shader.tres" type="Shader" id=10]
[ext_resource path="res://sprites/player/skull_slide_color.png" type="Texture" id=11]
[ext_resource path="res://scripts/player/state machine/states/fall.gd" type="Script" id=12]
[ext_resource path="res://scripts/player/state machine/states/stunned.gd" type="Script" id=13]
[ext_resource path="res://sprites/player/skull_jump_normal.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/skull_fall_color.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/skull_fall_normal.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/skull_punch_color.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/skull_punch_normal.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/skull_idle_color.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/skull_run_color.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/skull_run_normal.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/skull_idle_normal.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/skull_jump_color.png" type="Texture" id=23]
[ext_resource path="res://sprites/player/skull_slide_normal.png" type="Texture" id=24]
[ext_resource path="res://sprites/player/skull_wallslide_color.png" type="Texture" id=25]
[ext_resource path="res://scripts/player/state machine/states/wall_slide.gd" type="Script" id=26]
[ext_resource path="res://scenes/SpriteEchoGenerator.tscn" type="PackedScene" id=27]
[ext_resource path="res://scripts/player/Orientation.gd" type="Script" id=29]
[ext_resource path="res://scenes/CeilingCheck.gd" type="Script" id=30]
[ext_resource path="res://scripts/player/WallChecker.gd" type="Script" id=31]
[ext_resource path="res://scenes/WallJumpCoyoteTimer.gd" type="Script" id=32]

[sub_resource type="CapsuleShape2D" id=20]
radius = 46.0
height = 35.066

[sub_resource type="Gradient" id=29]
colors = PoolColorArray( 0, 1, 0.168627, 0.74902, 0.627451, 0, 1, 0.517647 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=26]
flag_disable_z = true
direction = Vector3( -1, -0.25, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0
scale_curve = SubResource( 25 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 31.75, 68.25 )

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 10 )
shader_param/level_1 = 0.5
shader_param/level_1_smoothing = 0.03
shader_param/level_2 = 0.0
shader_param/level_2_smoothing = 0.03
shader_param/min_light = 0.0
shader_param/mid_light = 0.0
shader_param/max_light = 1.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -74 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fall"
length = 0.5
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -61 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle"
length = 0.966667
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.966667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -73 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "jump"
length = 0.266667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.266667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 23 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.266666 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -54 ), Vector2( -6, -76 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "punch"
length = 0.666667
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 27, -72 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "run"
length = 0.533333
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.533333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 21 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -73 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "slide"
length = 0.666667
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -73 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "stunned"
length = 0.0333333
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13, -72 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "wall_slide"
length = 0.666667
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -27, -56 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["players"]]
position = Vector2( 0, -62 )
collision_mask = 3
collision/safe_margin = 0.16
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 100.0 ]
}
jump_height = 125.0
jump_time_to_peak = 0.175
jump_time_to_descent = 0.125
wall_slide_gravity_modifier = 0.3

[node name="PhysicsColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )

[node name="CeilingCheck" type="Node2D" parent="."]
script = ExtResource( 30 )

[node name="CeilingCheckRay1" type="RayCast2D" parent="CeilingCheck"]
position = Vector2( 25, -40 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="CeilingCheckRay2" type="RayCast2D" parent="CeilingCheck"]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="CeilingCheckRay3" type="RayCast2D" parent="CeilingCheck"]
position = Vector2( -25, -40 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="RightWallCheck" type="Node2D" parent="."]
script = ExtResource( 31 )

[node name="WallCheckRay" type="RayCast2D" parent="RightWallCheck"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="WallCheckRay2" type="RayCast2D" parent="RightWallCheck"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="WallCheckRay3" type="RayCast2D" parent="RightWallCheck"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="LeftWallCheck" type="Node2D" parent="."]
script = ExtResource( 31 )

[node name="WallCheckRay" type="RayCast2D" parent="LeftWallCheck"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="WallCheckRay2" type="RayCast2D" parent="LeftWallCheck"]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="WallCheckRay3" type="RayCast2D" parent="LeftWallCheck"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="SpriteEchoGenerator" parent="." instance=ExtResource( 27 )]
sprite_path = NodePath("../Orientation/Sprite")
x_orientation_path = NodePath("../Orientation")
fade_time = 0.2
echo_gradient = SubResource( 29 )

[node name="Orientation" type="Node2D" parent="."]
position = Vector2( 0, 63 )
script = ExtResource( 29 )
squash_amount = 0.15
squash_speed = 0.1
stretch_amount = 0.2
stretch_speed = 0.1

[node name="SlideParticles" type="Particles2D" parent="Orientation"]
position = Vector2( -52, 0 )
emitting = false
amount = 40
lifetime = 0.25
local_coords = false
process_material = SubResource( 26 )

[node name="Punch" type="Area2D" parent="Orientation" groups=["attack_box"]]
visible = false
collision_layer = 256
collision_mask = 9
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orientation/Punch"]
position = Vector2( 31.25, -70.2501 )
rotation = 1.5708
shape = SubResource( 28 )

[node name="Sprite" type="Sprite" parent="Orientation"]
material = SubResource( 22 )
position = Vector2( 12, -74 )
scale = Vector2( 0.572266, 0.572266 )
texture = ExtResource( 19 )
normal_map = ExtResource( 22 )
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Orientation/Sprite"]
anims/RESET = SubResource( 14 )
anims/fall = SubResource( 15 )
anims/idle = SubResource( 16 )
anims/jump = SubResource( 17 )
anims/punch = SubResource( 18 )
anims/run = SubResource( 19 )
anims/slide = SubResource( 23 )
anims/stunned = SubResource( 21 )
anims/wall_slide = SubResource( 27 )

[node name="SquashStretch" type="Tween" parent="Orientation"]

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.075
one_shot = true

[node name="WallJumpCoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
script = ExtResource( 32 )

[node name="State_Manager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="idle" type="Node" parent="State_Manager"]
script = ExtResource( 6 )

[node name="run" type="Node" parent="State_Manager"]
script = ExtResource( 7 )

[node name="jump" type="Node" parent="State_Manager"]
script = ExtResource( 8 )

[node name="fall" type="Node" parent="State_Manager"]
script = ExtResource( 12 )

[node name="attack" type="Node" parent="State_Manager"]
script = ExtResource( 1 )

[node name="stunned" type="Node" parent="State_Manager"]
script = ExtResource( 13 )

[node name="wall_slide" type="Node" parent="State_Manager"]
script = ExtResource( 26 )

[node name="DebugLabel" type="Label" parent="."]
margin_left = -100.0
margin_top = -89.0
margin_right = 100.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="DebugLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 1, 1 )

[connection signal="body_entered" from="Orientation/Punch" to="State_Manager/attack" method="_on_Punch_body_entered"]
[connection signal="timeout" from="StunTimer" to="State_Manager/stunned" method="_on_StunTimer_timeout"]
